update of buttons that should not be shown in kiosk mode. This also includes removing text: Lån bog and changing btn text Bog to Find Bogen. This also fixes the problem with the logo not showing on the search page and a temporary solution to the missing infomedia image in review modal

--- a/src/client/components/general/AddToListButton/AddToListButton.css
+++ b/src/client/components/general/AddToListButton/AddToListButton.css
@@ -1,4 +1,4 @@
-.App.kioskmode .AddToListButton{
+.App.kioskmode .AddToListButton, .Ebog, .Lydbog, .orderAllBtn, .printListBtn, p.loanTitle{
   display:none;
 }
 
